--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,10 @@ dependencies:
   flutter:
     sdk: flutter
   provider: 6.1.1
+  firebase_core: 2.24.2
+  google_sign_in: ^6.1.6
+  firebase_auth: ^4.16.0
+  cloud_firestore: ^4.14.0
 
 dev_dependencies:
   flutter_test:
